tests/baselines/reference/parserES3Accessors2(strict=true).errors.txt
parserES3Accessors2.ts(2,9): error TS7032: Property 'Foo' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
parserES3Accessors2.ts(2,13): error TS7006: Parameter 'a' implicitly has an 'any' type.


==== parserES3Accessors2.ts (2 errors) ====
    class C {
        set Foo(a) { }
            ~~~
!!! error TS7032: Property 'Foo' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    }